[gd_scene load_steps=3 format=3 uid="uid://dgq6awn00b57a"]

[ext_resource type="Script" path="res://Screens/Debug/debug_panel.gd" id="1_cq0dk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4cxq"]
bg_color = Color(0.15, 0.15, 0.15, 0.909804)

[node name="DebugPanel" type="Panel" node_paths=PackedStringArray("GoldSpinbox", "GooblinSpinbox", "LevelSpinbox")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.5
offset_top = -205.0
offset_right = 203.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r4cxq")
script = ExtResource("1_cq0dk")
GoldSpinbox = NodePath("VBoxContainer/GoldHBox/GoldSpinBox")
GooblinSpinbox = NodePath("VBoxContainer/GooblinsHBox/GooblinSpinBox")
LevelSpinbox = NodePath("VBoxContainer/LevelsHBox/LevelSpinbox")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Secret Debug Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GoldHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/GoldHBox"]
layout_mode = 2
text = "Gold:"

[node name="GoldSpinBox" type="SpinBox" parent="VBoxContainer/GoldHBox"]
layout_mode = 2
max_value = 999999.0

[node name="GooblinsHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/GooblinsHBox"]
layout_mode = 2
text = "Gooblins"

[node name="GooblinSpinBox" type="SpinBox" parent="VBoxContainer/GooblinsHBox"]
layout_mode = 2
max_value = 10000.0

[node name="LevelsHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/LevelsHBox"]
layout_mode = 2
text = "Levels Completed"

[node name="LevelSpinbox" type="SpinBox" parent="VBoxContainer/LevelsHBox"]
layout_mode = 2
max_value = 4.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Combat" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(371.465, 117.725)
layout_mode = 2
vertical = true

[node name="CombatOnly" type="Label" parent="VBoxContainer/Combat"]
layout_mode = 2
text = "In Combat Only!:"
horizontal_alignment = 1

[node name="GooblinSpawnBox" type="HBoxContainer" parent="VBoxContainer/Combat"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Combat/GooblinSpawnBox"]
layout_mode = 2
text = "Basic Gooblin
"

[node name="Spawn1Gooblin" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox"]
layout_mode = 2
text = "Spawn 1"

[node name="Spawn10Gooblin" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox"]
layout_mode = 2
text = "Spawn 10"

[node name="Spawn100Gooblin" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox"]
layout_mode = 2
text = "Spawn 100
"

[node name="GooblinSpawnBox2" type="HBoxContainer" parent="VBoxContainer/Combat"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Combat/GooblinSpawnBox2"]
layout_mode = 2
text = "Shield Gooblin
"

[node name="Spawn1Shield" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox2"]
layout_mode = 2
text = "Spawn 1"

[node name="Spawn10Shield" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox2"]
layout_mode = 2
text = "Spawn 10"

[node name="Spawn100Shield" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox2"]
layout_mode = 2
text = "Spawn 100
"

[node name="GooblinSpawnBox3" type="HBoxContainer" parent="VBoxContainer/Combat"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Combat/GooblinSpawnBox3"]
layout_mode = 2
text = "Scaler Gooblin
"

[node name="Spawn1Scaler" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox3"]
layout_mode = 2
text = "Spawn 1"

[node name="Spawn10Scaler" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox3"]
layout_mode = 2
text = "Spawn 10"

[node name="Spawn100Scaler" type="Button" parent="VBoxContainer/Combat/GooblinSpawnBox3"]
layout_mode = 2
text = "Spawn 100
"

[node name="WinContainer" type="HBoxContainer" parent="VBoxContainer/Combat"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Combat/WinContainer"]
layout_mode = 2
text = "Defeat Enemy"

[node name="WinButton" type="Button" parent="VBoxContainer/Combat/WinContainer"]
layout_mode = 2
text = "Only Babies Press This Button"

[node name="Close" type="Button" parent="."]
layout_mode = 0
offset_left = 7.5
offset_top = 6.0
offset_right = 37.5
offset_bottom = 32.0
text = "X"

[connection signal="value_changed" from="VBoxContainer/GoldHBox/GoldSpinBox" to="." method="_on_gold_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/GooblinsHBox/GooblinSpinBox" to="." method="_on_gooblin_spin_box_value_changed"]
[connection signal="value_changed" from="VBoxContainer/LevelsHBox/LevelSpinbox" to="." method="_on_level_spinbox_value_changed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox/Spawn1Gooblin" to="." method="_on_spawn_1_gooblin_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox/Spawn10Gooblin" to="." method="_on_spawn_10_gooblin_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox/Spawn100Gooblin" to="." method="_on_spawn_100_gooblin_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox2/Spawn1Shield" to="." method="_on_spawn_1_shield_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox2/Spawn10Shield" to="." method="_on_spawn_10_shield_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox2/Spawn100Shield" to="." method="_on_spawn_100_shield_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox3/Spawn1Scaler" to="." method="_on_spawn_1_scaler_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox3/Spawn10Scaler" to="." method="_on_spawn_10_scaler_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/GooblinSpawnBox3/Spawn100Scaler" to="." method="_on_spawn_100_scaler_pressed"]
[connection signal="pressed" from="VBoxContainer/Combat/WinContainer/WinButton" to="." method="_on_win_button_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
